--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   --third-bg-color: #f5f4fa;
   --white-color: #ffffff;
   --black-color: #000000;
-  --hero-button-bg: #188ce8;
+  --button-bg: #188ce8;
   --icons-color: #afb1b8;
 }
 
@@ -284,7 +284,7 @@ body {
 
 .hero-button:hover,
 .hero-button:focus {
-  background-color: var(--hero-button-bg);
+  background-color: var(--button-bg);
 }
 
 .backdrop {
@@ -577,6 +577,7 @@ body {
 
 .footer-socials {
   margin-left: 70px;
+  margin-right: 93px;
 }
 
 .footer-socials-title {
@@ -617,6 +618,69 @@ body {
   align-items: center;
 
   fill: var(--white-color);
+}
+
+.main-form {
+  display: flex;
+}
+
+.footer-form input {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  padding-right: 295px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+
+  background-color: var(--secondary-bg-color);
+}
+
+.footer-form input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+
+  margin-bottom: 20px;
+}
+
+.footer-form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 12px;
+  padding: 10px 28px;
+
+  background-color: var(--accent);
+  color: var(--white-color);
+  border-radius: 4px;
+  border: none;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-button:hover,
+.footer-form-button:focus {
+  background-color: var(--button-bg);
+}
+
+.button-send-icon {
+  margin-left: 10px;
 }
 
 /*------Portfolio------*/
