--- a/css/styles.css
+++ b/css/styles.css
@@ -328,6 +328,155 @@ body {
   border-radius: 50%;
   background-color: var(--white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button:hover,
+.close-button:focus {
+  fill: var(--accent);
+}
+
+.modal-form-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+
+  color: var(--title-color);
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-right: 40px;
+  margin-left: 40px;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.modal-input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  height: 40px;
+  padding-left: 42px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border: 1px solid var(--accent);
+}
+
+.modal-input:focus + .form-icon {
+  fill: var(--accent);
+}
+
+.form-field .form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+}
+
+.form-field label {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+
+  color: var(--primary-color-text);
+}
+
+.form-field .modal-textarea {
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  width: 100%;
+  height: 120px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field .modal-textarea:hover,
+.form-field .modal-textarea:focus {
+  border: 1px solid #2196f3;
+}
+
+.form-field .modal-textarea::placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-button {
+  background: var(--accent);
+  color: var(--white-color);
+  border-radius: 4px;
+  border: none;
+  padding: 10px 52px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button:hover,
+.modal-button:focus {
+  background-color: var(--button-bg);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.modal-checkbox {
+  appearance: none;
+  position: absolute;
+}
+
+.icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-color);
+  border-radius: 2px;
+  margin-right: 7px;
+}
+
+.modal-checkbox:checked + .icon {
+  background-color: var(--accent);
+  background-image: url(../images/check.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: var(--accent);
+}
+
+.form-checkbox {
+  padding-right: auto;
+  padding-left: auto;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+.form-checkbox .checkbox-label {
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.checkbox-label-link {
+  color: var(--accent);
 }
 
 /*------Benefits-list------*/
@@ -620,11 +769,11 @@ body {
   fill: var(--white-color);
 }
 
-.main-form {
+.form {
   display: flex;
 }
 
-.footer-form input {
+.footer-form .footer-input {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 16px;
@@ -636,7 +785,7 @@ body {
   background-color: var(--secondary-bg-color);
 }
 
-.footer-form input::placeholder {
+.footer-form .footer-input::placeholder {
   font-size: 16px;
   line-height: 1.25;
 
