--- a/css/styles.css
+++ b/css/styles.css
@@ -776,7 +776,7 @@ body {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 16px;
-  padding-right: 295px;
+  width: 354px;
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
